# embed-all

./: .gitignore  README.md  pyproject.toml
src/embedd_all/: rag_query.py
