[project]
name = "embedd-all"
version = "0.0.1"
authors = [
  { name="Arnab", email="arnab.bhattacharya28122000@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openpyxl==3.1.5",
    "pandas==2.2.2",
]

[project.urls]
Homepage = ""
Issues = ""